fix mobile visibility

--- a/src/components/BlueGreenTest.css
+++ b/src/components/BlueGreenTest.css
@@ -1,7 +1,7 @@
 .blue-green-test-wrapper {
   width: 100vw !important;
-  height: 100vh !important;
-  overflow: hidden;
+  max-width: none !important;
+  height: 100dvh;
 }
 
 .blue-green-test-container {
@@ -85,16 +85,12 @@
   transition: all 0.3s ease;
   font-size: 1rem;
   font-weight: bold;
-  flex: 1;
+  flex: 1 auto;
   margin: 0;
   background-color: black;
   color: white;
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 15px 10px;
-  min-height: 60px;
+  //overflow: hidden;
+  display: inline-block;
   box-shadow: inset 0 0 0 0 rgba(255, 255, 255, 1);
   border-top: 1px solid white;
 }
